adding as of X minutes ago

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
 <div class='row vertical-center'>
   <div class='cols-md-12'>
     <h1 class="<%= @status.downcase %>"><%= @status %></h1>
+    <h4>Last Updated: <%= @date %> ago</h4>
   </div>
 </div>
