--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,13 @@
 <div class='row vertical-center'>
   <div class='cols-md-12'>
+    <br/>
     <h1 class="<%= @status.downcase %>"><%= @status %></h1>
     <h4>Last Updated: <%= @date %> ago</h4>
+    <br/>
+    <% if @status.eql? 'Vacant' %>
+      <img src="images/dogs.gif"/>
+    <% else %>
+      <img src="images/art.gif"/>
+    <% end %>
   </div>
 </div>
