setting a differnet image for each day

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
     <% if @status.eql? 'Vacant' %>
       <img src="images/dogs.gif"/>
     <% else %>
-      <img src="images/art.gif"/>
+      <img src="images/<%= @image_name %>.gif"/>
     <% end %>
   </div>
 </div>
